--- a/gallery.html
+++ b/gallery.html
@@ -3,6 +3,7 @@
 
 <head>
     <base href="/">
+	<m <base href="/">
 	<meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
     <title>Hotel</title>
@@ -35,12 +36,14 @@
     <div class="history__wrapp">
       <p class="title_contact">Gallery</p>
     </div>
-<div class="tst">test</div>
       
 <div class="masters-room__items gallery__items" id="listingTable"></div>
-<a href="javascript:prevPage()" id="btn_prev">Prev</a>
-<a href="javascript:nextPage()" id="btn_next">Next</a>
-page: <span id="page"></span>
+<div class="gallery_pagination">
+  <a href="javascript:prevPage()" id="btn_prev">Prev</a>
+  <a href="javascript:nextPage()" id="btn_next">Next</a>
+  page: <span id="page"></span>
+</div>
+
 
 </main>
 <footer>
