--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     <nav>
       <ul class="menu__items">
         <li><a href="index.html">Home</a></li>
-        <li><a>Rooms</a></li>
+        <li><a href="rooms.html">Rooms</a></li>
         <li><a href="gallery.html">Gallery</a></li>
         <li><a href="contact.html">Contact</a></li>
       </ul>
@@ -37,9 +37,9 @@
         <p>Welcom to hotel</br><span> Mirotel</span> </p>
       </div>
       <div class="main-slider">
-        <div><img src="img/1_RQfaYTS.jpg"></div>
-        <div><img src="img/3_giiiTs6.jpg"></div>
-        <div><img src="img/6_r4oQd0M.jpg"></div>
+        <div style="background-image: url('img/1_RQfaYTS.jpg')"></div>
+        <div style="background-image: url('img/3_giiiTs6.jpg')"></div>
+        <div style="background-image: url('img/6_r4oQd0M.jpg')"></div>
       </div>
     </div>
     <div class="masters-room__wrapp">
