--- a/contact.html
+++ b/contact.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-    <base href="/">
+     <base href="/">
 	<meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
     <title>Hotel</title>
@@ -15,7 +15,8 @@
 
   <script type="text/javascript" src="node_modules/jquery/dist/jquery.min.js"></script>
   <script type="text/javascript" src="slick/slick.min.js"></script>
-    <script src="script.js"></script>
+ 
+    <script src="contact.js"></script>
 
 </head>
 
@@ -37,7 +38,7 @@
     </div>
     <div class="masters-room__items">
       <div class="contact__item">
-        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d10421.74891292074!2d28.4627025!3d49.2301991!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x472d5b7b46b9094d%3A0x291d6f399828a946!2z0LLRg9C70LjRhtGPINCh0L7QsdC-0YDQvdCwLCA1Niwg0JLRltC90L3QuNGG0Y8sINCS0ZbQvdC90LjRhtGM0LrQsCDQvtCx0LvQsNGB0YLRjCwgMjEwMDA!5e0!3m2!1suk!2sua!4v1559025956309!5m2!1suk!2sua" width="100%" height="450" frameborder="0" style="border:0" allowfullscreen></iframe>
+       <div id="map"></div> 
       </div>
       <div class="contact__item">
         <form>
@@ -58,6 +59,6 @@
   <p>Copyraght 2019</p>
 </footer>
 </body>
-
+ <script async defer src="https://maps.googleapis.com/maps/api/js?callback=initMap"></script>
 
 </html>
