--- a/contact.html
+++ b/contact.html
@@ -59,6 +59,7 @@
   <p>Copyraght 2019</p>
 </footer>
 </body>
- <script async defer src="https://maps.googleapis.com/maps/api/js?callback=initMap"></script>
+<script async defer
+    src="https://maps.googleapis.com/maps/api/js?key=AIzaSyC-V0I_KqvaIlieEDX53igBBTbqIu9GiQA&callback=initMap"></script>
 
 </html>
