--- a/gallery.html
+++ b/gallery.html
@@ -22,7 +22,7 @@
 
 <body>
   <header>
-    <a href=""><img src="img/logo.png"></a>
+    <a href="" class="logo_link"><img src="img/logo.png"></a>
     <nav>
       <ul class="menu__items">
         <li><a href="index.html">Home</a></li>
