--- a/app/contact/contact.html
+++ b/app/contact/contact.html
@@ -15,7 +15,7 @@
 
   <script type="text/javascript" src="node_modules/jquery/dist/jquery.min.js"></script>
   <script type="text/javascript" src="slick/slick.min.js"></script>
- 
+
     <script src="contact.js"></script>
 
 </head>
@@ -26,9 +26,9 @@
     <nav>
       <ul class="menu__items">
         <li><a href="index.html">Home</a></li>
-        <li><a href="rooms.html">Rooms</a></li>
-        <li><a href="gallery.html">Gallery</a></li>
-        <li><a href="contact.html">Contact</a></li>
+        <li><a href="app/room/rooms.html">Rooms</a></li>
+        <li><a href="app/gallery/gallery.html">Gallery</a></li>
+        <li><a href="app/contact/contact.html">Contact</a></li>
       </ul>
     </nav>
   </header>
@@ -38,7 +38,7 @@
     </div>
     <div class="masters-room__items">
       <div class="contact__item">
-       <div id="map"></div> 
+       <div id="map"></div>
       </div>
       <div class="contact__item">
         <form>
@@ -60,6 +60,6 @@
 </footer>
 </body>
 <script async defer
-    src="https://maps.googleapis.com/maps/api/js?key=AIzaSyC-V0I_KqvaIlieEDX53igBBTbqIu9GiQA&callback=initMap"></script>
+    src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAJTjzQwTa8g-9kB-eLFMv8VNTXw7RY2MM&callback=initMap"></script>
 
 </html>
