--- a/app/contact/contact.html
+++ b/app/contact/contact.html
@@ -16,7 +16,7 @@
   <script type="text/javascript" src="node_modules/jquery/dist/jquery.min.js"></script>
   <script type="text/javascript" src="slick/slick.min.js"></script>
 
-    <script src="contact.js"></script>
+    <script src="фpp/contact/contact.js"></script>
 
 </head>
 
