--- a/app/room/rooms.html
+++ b/app/room/rooms.html
@@ -21,10 +21,10 @@
     <a href="" class="logo_link"><img src="img/logo.png"></a>
     <nav>
       <ul class="menu__items">
-        <li><a href="../../index.html">Home</a></li>
-        <li><a href="rooms.html">Rooms</a></li>
-        <li><a href="../gallery/gallery.html">Gallery</a></li>
-        <li><a href="../contact/contact.html">Contact</a></li>
+        <li><a href="index.html">Home</a></li>
+        <li><a href="app/room/rooms.html">Rooms</a></li>
+        <li><a href="app/gallery/gallery.html">Gallery</a></li>
+        <li><a href="app/contact/contact.html">Contact</a></li>
       </ul>
     </nav>
   </header>
@@ -34,8 +34,8 @@
     </div>
     <div class="filter_rooms">
       <div class="">
-      <p onclick="litlePrise()"> від менших до більших</p>
       <p onclick="biggestPrise()"> від менших до більших</p>
+      <p onclick="lowerPrice()"> від менших до більших</p>
       </div>
 
     </div>
