--- a/app/gallery/gallery.html
+++ b/app/gallery/gallery.html
@@ -25,10 +25,10 @@
     <a href="" class="logo_link"><img src="img/logo.png"></a>
     <nav>
       <ul class="menu__items">
-        <li><a href="../../index.html">Home</a></li>
-        <li><a href="../room/rooms.html">Rooms</a></li>
-        <li><a href="gallery.html">Gallery</a></li>
-        <li><a href="../contact/contact.html">Contact</a></li>
+        <li><a href="index.html">Home</a></li>
+        <li><a href="app/room/rooms.html">Rooms</a></li>
+        <li><a href="app/gallery/gallery.html">Gallery</a></li>
+        <li><a href="app/contact/contact.html">Contact</a></li>
       </ul>
     </nav>
   </header>
