--- a/app/contact/contact.html
+++ b/app/contact/contact.html
@@ -15,8 +15,8 @@
 
   <script type="text/javascript" src="node_modules/jquery/dist/jquery.min.js"></script>
   <script type="text/javascript" src="slick/slick.min.js"></script>
-
-    <script src="фpp/contact/contact.js"></script>
+  <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAJTjzQwTa8g-9kB-eLFMv8VNTXw7RY2MM&callback=initMap" async defer></script>
+    <script src="app/contact/contact.js"></script>
 
 </head>
 
@@ -59,7 +59,6 @@
   <p>Copyraght 2019</p>
 </footer>
 </body>
-<script async defer
-    src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAJTjzQwTa8g-9kB-eLFMv8VNTXw7RY2MM&callback=initMap"></script>
+
 
 </html>
